homepage fixed horizontal scrollbar

--- a/src/navigation/navbar.css
+++ b/src/navigation/navbar.css
@@ -28,10 +28,6 @@
     font-family: caverson;
 }
 
-.MuiButton-root{
-    margin-left: 10em;
-}
-
 input{
     max-width:100%;
     max-height:100%;
